wandb/run-20230421_204825-7rvsknwf/files/output.log


  0%|          | 0/1000 [00:03<?, ?it/s]
[autoreload of toolkit.train_marlios failed: Traceback (most recent call last):
  File "/Users/cameronwitz/Desktop/CSCI_566/env/lib/python3.10/site-packages/IPython/extensions/autoreload.py", line 261, in check
    superreload(m, reload, self.old_objects)
  File "/Users/cameronwitz/Desktop/CSCI_566/env/lib/python3.10/site-packages/IPython/extensions/autoreload.py", line 459, in superreload
    module = reload(module)
  File "/opt/homebrew/Cellar/python@3.10/3.10.11/Frameworks/Python.framework/Versions/3.10/lib/python3.10/importlib/__init__.py", line 169, in reload
    _bootstrap._exec(spec, module)
  File "<frozen importlib._bootstrap>", line 619, in _exec
  File "<frozen importlib._bootstrap_external>", line 879, in exec_module
  File "<frozen importlib._bootstrap_external>", line 1017, in get_code
  File "<frozen importlib._bootstrap_external>", line 947, in source_to_code
  File "<frozen importlib._bootstrap>", line 241, in _call_with_frames_removed
  File "/Users/cameronwitz/Desktop/CSCI_566/maRLios/toolkit/train_marlios.py", line 200
    losses = []
    ^^^^^^
IndentationError: expected an indented block after 'if' statement on line 197
]
The autoreload extension is already loaded. To reload it, use:
  %reload_ext autoreload
The autoreload extension is already loaded. To reload it, use:
  %reload_ext autoreload
[autoreload of toolkit.train_marlios failed: Traceback (most recent call last):
  File "/Users/cameronwitz/Desktop/CSCI_566/env/lib/python3.10/site-packages/IPython/extensions/autoreload.py", line 261, in check
    superreload(m, reload, self.old_objects)
  File "/Users/cameronwitz/Desktop/CSCI_566/env/lib/python3.10/site-packages/IPython/extensions/autoreload.py", line 459, in superreload
    module = reload(module)
  File "/opt/homebrew/Cellar/python@3.10/3.10.11/Frameworks/Python.framework/Versions/3.10/lib/python3.10/importlib/__init__.py", line 169, in reload
    _bootstrap._exec(spec, module)
  File "<frozen importlib._bootstrap>", line 619, in _exec
  File "<frozen importlib._bootstrap_external>", line 879, in exec_module
  File "<frozen importlib._bootstrap_external>", line 1017, in get_code
  File "<frozen importlib._bootstrap_external>", line 947, in source_to_code
  File "<frozen importlib._bootstrap>", line 241, in _call_with_frames_removed
  File "/Users/cameronwitz/Desktop/CSCI_566/maRLios/toolkit/train_marlios.py", line 200
    losses = []
    ^^^^^^
IndentationError: expected an indented block after 'if' statement on line 197
]
The autoreload extension is already loaded. To reload it, use:
  %reload_ext autoreload



  0%|          | 2/1000 [01:17<10:41:32, 38.57s/it]
The autoreload extension is already loaded. To reload it, use:
  %reload_ext autoreload



  0%|          | 4/1000 [00:09<37:48,  2.28s/it]